# build-test

./: .gitignore  CMakeLists.txt  Info.plist  entitlements.plist  main.cpp
.github/workflows/: build-linux.yml  build-macos.yml  build-qt.yml  build-win-static.yml  build-win.yml  build.yml
